release 2.12.1
