# target/generated-sources/swagger/src/main/java/com/keytiles/api/model/reports/v1/ReportsEndpointErrorCodes.java
@@ -35,6 +35,7 @@ public enum ReportsEndpointErrorCodes {
   REPORTSETUP_EXISTS("reportSetup_exists"),
   BESTEFFORT_RELAXATION_REQUIRED("bestEffort_relaxation_required"),
   QUERYRANGE_NOT_SERVABLE("queryRange_not_servable"),
+  REPORT_SECTIONS_FAILED("report_sections_failed"),
   URL_INVALID("url_invalid"),
   ACTIONTOKEN_INTERNALERROR("actionToken_internalError"),
   ACTIONTOKEN_MISSING("actionToken_missing"),
